[#901][FEATURE] Migrate project to springboot